// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InterceptList should add and remove children after clicking buttons 1`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Unpause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
          <input
            class="fixed "
            style="padding: 0.25rem; left: 0px; top: 0px; width: calc(0px + 2 * 0.25rem); min-width: 120px;"
            type="text"
            value="example.com"
          />
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterceptList should add and remove children after clicking buttons 2`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Unpause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
          <input
            class="fixed "
            style="padding: 0.25rem; left: 0px; top: 0px; width: calc(0px + 2 * 0.25rem); min-width: 120px;"
            type="text"
            value="example.com"
          />
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterceptList should add and remove children after clicking buttons 3`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Unpause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
          <input
            class="fixed "
            style="padding: 0.25rem; left: 0px; top: 0px; width: calc(0px + 2 * 0.25rem); min-width: 120px;"
            type="text"
            value="example.com"
          />
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterceptList should change selection after clicking items 1`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Unpause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterceptList should change selection after clicking items 2`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Unpause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterceptList should match empty snapshot 1`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Pause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 "
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap "
          >
            example.com
          </span>
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterceptList should show and hide pattern edit modal 1`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Unpause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
          <input
            class="fixed "
            style="padding: 0.25rem; left: 0px; top: 0px; width: calc(0px + 2 * 0.25rem); min-width: 120px;"
            type="text"
            value="example.com"
          />
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`InterceptList should show input modal on double click 1`] = `
<div>
  <div
    class="flex flex-col "
    id="intercept-list"
    role="list"
  >
    <div
      class="p-1 flex space-x-1 justify-between select-none bg-slate-100"
    >
      <span
        class="font-bold flex-auto"
      >
        Intercepts
      </span>
      <button
        class="self-stretch"
        title="Unpause intercepts"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
      <button
        class="self-stretch"
        title="Add intercept"
      >
        <svg
          class="h-full w-auto"
        />
      </button>
    </div>
    <div
      class="flex flex-col overflow-y-visible"
    >
      <div
        class="flex w-full select-none justify-between p-1 bg-blue-100"
        role="listitem"
      >
        <div
          class="flex flex-grow items-center overflow-hidden"
        >
          <input
            checked=""
            class="mr-0.5 focus:ring-0 text-gray-400"
            type="checkbox"
          />
          <span
            class="w-full mx-0.5 empty:before:content-['\\\\200b'] overflow-hidden text-ellipsis whitespace-nowrap text-gray-400"
          >
            example.com
          </span>
        </div>
        <button
          class="self-stretch"
          title="Delete intercept"
        >
          <svg
            class="h-full w-auto"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
